src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  ::selection {
    background-color: #5881a1;
    color: white;
  }
}

@layer components {
  .nav > a {
    @apply relative overflow-hidden px-3 py-2 transition-colors duration-300 after:absolute after:inset-x-0 after:bottom-0 after:h-[1.5px] after:bg-green-dark after:content-[''] hover:text-green-dark hover:before:scale-100;
  }

  .nav a::after {
    translate: var(--_translate, 0);
    scale: var(--_scale, 0) 1;
    transition:
      scale 100ms var(--_scale-delay, 0ms),
      translate 200ms;
  }

  /* Previous sibling hovered */
  .nav a:hover ~ a {
    --_translate: -100%;
    --_scale-delay: 200ms;
  }

  /* Other sibling hovered */
  .nav:hover a {
    --_translate: 100%;
    --_scale-delay: 200ms;
  }

  /*
    The actually hovered <a> element
    Same specificity as other sibling, must come after or be artificially inflated (eg. :hover:hover)
  */
  .nav a:hover {
    --_scale: 1;
    --_translate: 0;
    --_scale-delay: 0ms;
  }

  .nav a.active {
    --_scale: 0.15;
    --_translate: 0;
    --_scale-delay: 0ms;
  }

  .nav a.active:hover {
    --_scale: 1;
    --_translate: 0;
    --_scale-delay: 0ms;
  }

  .nav-mobile > div {
    transition: transform, padding, color;
    @apply relative py-4 duration-300 ease-out before:transition-transform before:duration-300 before:ease-out hover:px-3 hover:text-green-dark;
  }

  .hero-text h2 {
    text-shadow: -3px 3px 0px #597355;

    @media (max-width: 639px) {
      text-shadow: -2px 2px 0px #597355;
    }
  }

  .hero-text h3 {
    text-shadow: -2px 2px 0px #597355;

    @media (max-width: 639px) {
      text-shadow: -1px 1px 0px #597355;
    }
  }

  .subhero h1 {
    @media (max-width: 639px) {
      text-shadow:
        4px 4px 32px #00233e,
        -4px 4px 32px #00233e,
        4px -4px 32px #00233e,
        -4px -4px 32px #00233e,
        4px 0px 32px #00233e,
        -4px 0px 32px #00233e,
        0px 4px 32px #00233e,
        0px -4px 32px #00233e,
        4px 4px 32px #00233e,
        -4px 4px 32px #00233e,
        4px -4px 32px #00233e,
        -4px -4px 32px #00233e,
        4px 0px 32px #00233e,
        -4px 0px 32px #00233e,
        0px 4px 32px #00233e,
        0px -4px 32px #00233e,
        4px 4px 32px #00233e,
        -4px 4px 32px #00233e,
        4px -4px 32px #00233e,
        -4px -4px 32px #00233e,
        4px 0px 32px #00233e,
        -4px 0px 32px #00233e,
        0px 4px 32px #00233e,
        0px -4px 32px #00233e;
    }
  }

  .hero-gradient {
    background: linear-gradient(
      230deg,
      rgba(0, 37, 92, 0.81) -6.07%,
      rgba(136, 136, 136, 0) 101.04%,
      rgba(136, 136, 136, 0) 140.74%
    );
  }
}

